--- a/app.json
+++ b/app.json
@@ -5,6 +5,12 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "android": {
+      "package": "com.ricardobpaula.myfinances"
+    },
+    "ios": {
+      "bundleIdentifier": "com.ricardobpaula.myfinances"
+    }
   }
 }
