--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build:preview": "eas build --platform android --local --profile preview",
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
