--- a/package.json
+++ b/package.json
@@ -12,34 +12,34 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@hookform/resolvers": "^2.9.7",
-    "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
+    "expo": "~46.0.9",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
     "jwt-decode": "^3.1.2",
     "native-base": "^3.4.9",
     "phosphor-react-native": "^1.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-hook-form": "^7.34.0",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native": "0.69.5",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-web": "~0.18.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
-    "react-native-svg-transformer": "^1.0.0",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.18.13",
+    "@types/react": "^18.0.17",
+    "@types/react-native": "^0.69.5",
+    "typescript": "^4.8.2"
   },
   "private": true
 }
