--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "expo": "~46.0.9",
-    "expo-splash-screen": "~0.16.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "jwt-decode": "^3.1.2",
     "native-base": "^3.4.9",
@@ -36,10 +36,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@types/react": "^18.0.17",
-    "@types/react-native": "^0.69.5",
-    "typescript": "^4.8.2"
+    "@babel/core": "^7.18.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
